completed responsive homepage

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 
             </header>
         </div>
-        <hr class="header-spacer" />
 
         <section class="wrapper">
             <div id="main">
@@ -34,7 +33,7 @@
 
                 <hr />
 
-                <p><img class="alignleft" src="assets/images/matt-in-bellevue.jpg" alt="Matt Jennings" />Besides watching sports, I also enjoy contra dancing (like square dancing), watching live music, going for hikes, and watching movies. During this class I hope to get a stronger grasp of JavaScript and want to become a React and Node developer (MERN stack) in the future.</p>
+                <p><div class="alignleft img-wrapper"><img class="responsive" src="assets/images/matt-in-bellevue.jpg" alt="Matt Jennings" /></div>Besides watching sports, I also enjoy contra dancing (like square dancing), watching live music, going for hikes, and watching movies. During this class I hope to get a stronger grasp of JavaScript and want to become a React and Node developer (MERN stack) in the future.</p>
 
                 <p>Front-end JavaScript really interests me but it's been difficult to learn it on my own. That's why I'm looking forward to this class.</p>
 
