--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <ul>
                         <li><a class="active" href="index.html">About</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li class="last-nav"><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
 
