--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <meta
+name=viewport content="width=device-width, initial-scale = 1.0, user-scalable=yes">
     <title>About Me</title>
 </head>
 <body class="about-me">
